--- a/python Basic Assignments/Assignment_1.ipynb
+++ b/python Basic Assignments/Assignment_1.ipynb
@@ -9,27 +9,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5e04e924",
+   "cell_type": "markdown",
+   "id": "396978ad",
    "metadata": {},
    "source": [
-    "eg:- values can be integer or string and expressions will be mathematical operators.\n",
-    "* \n",
-    "'hello'\n",
-    "-87.8\n",
-    "- \n",
-    "/ \n",
-    "+\n",
-    "6 \n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "affc5d3d",
-   "metadata": {},
-   "source": [
-    "*, -, /, + are expressions\n",
-    "'hello', -87.8, 6 are Values"
+    "eg:- values can be integer or string and expressions will be mathematical operators.<br>\n",
+    "\n",
+    "Answer: <br>\n",
+    "\n",
+    "\\* ------------- expression <br>\n",
+    "'hello' ------- Value <br>\n",
+    "-87.8 --------- Value <br>\n",
+    "\\- ------------- expression <br>\n",
+    "/  ------------ expression <br>\n",
+    "\\+ ------------- expression <br>\n",
+    "6 ------------- Value <br>\n"
    ]
   },
   {
@@ -41,10 +35,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d97da557",
+   "cell_type": "markdown",
+   "id": "0c931aeb",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "String is a sequence of characters or a single character.In python strings are represented in between single or double quotation marks. eg: 'name', \"a\", \"full stack data science\"\n",
+    "\n",
+    "Variable is a memory location reserved to store values. A value can be of any datatype like int, float , bool, string, list, tuple, dict..etc.\n",
+    "\n",
+    "Difference between string and variable is that variable is a container( memory location) in which values can be stored such as string. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +59,21 @@
    "cell_type": "markdown",
    "id": "38dc2a46",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "3 basic different data types are as follows:\n",
+    " 1. Numeric: Numeric data type represent numbers such integers,complex number..etc. These can be again divided into 3 types:\n",
+    "         a. int - integers eg: 1,2,10\n",
+    "         b. float - numbers with decimals eg: 1.2, 3.456\n",
+    "         c. comlex - complex numbers with real and imaginary parts eg: 1+2j\n",
+    "             j represents imaginary part in python\n",
+    " \n",
+    " 2. String: String represents single or group of characters. str is the data type in python which represents this.\n",
+    "             eg: 'full', \"full stack data science\", 'd'\n",
+    " \n",
+    " 3. Boolean: Boolean is used to represent either True or False only. In Python, bool is the datatype used for this.\n",
+    "             eg: True, False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +87,19 @@
    "cell_type": "markdown",
    "id": "7172d8f9",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "Expressions are made up of operators and operands.\n",
+    " 1. Operands can be of any data type( int,str,bool).\n",
+    " 2. There are various operators such as:\n",
+    "             a. Airthmetic operators\n",
+    "             b. logical operators\n",
+    "             c. comparison operators\n",
+    "             d. bitwise operators\n",
+    "    if there are more than one operators, then precendence is followed to evaluate the expression.\n",
+    "    \n",
+    "    Any expression is interpreted to give another value as output."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +113,16 @@
    "cell_type": "markdown",
    "id": "07fe88b8",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "Assignment statements assigns a value to a variable. The interpreter stores the value in the memory allocated to the variable when a statement is executed.\n",
+    "\n",
+    "eg: spam=10 .... It just assigns value 10 to variable named 'spam' and stores the value in memory reserved to variable.\n",
+    "\n",
+    "expressions are combination of operators and operands. When executed interpreter evaluates the expression and gives the value as output.\n",
+    "\n",
+    "eg: 2+10 .... It is an expression when executed, 2 is added to 10 and prints 12 as output(new value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +137,7 @@
    "id": "4a461c5d",
    "metadata": {},
    "source": [
-    "bacon = 22\n",
+    "bacon = 22 <br>\n",
     "bacon + 1"
    ]
   },
@@ -109,7 +145,34 @@
    "cell_type": "markdown",
    "id": "8d735a6f",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer: \n",
+    "\n",
+    "when above code is executed, variable bacon contains 22, since we just executed 'bacon + 1' expression but we never assigned it to bacon variable "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a72ef08d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bacon = 22\n",
+    "bacon + 1\n",
+    "bacon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,7 +187,7 @@
    "id": "1f4c4530",
    "metadata": {},
    "source": [
-    "'spam' + 'spamspam'\n",
+    "'spam' + 'spamspam'<br>\n",
     " 'spam' * 3"
    ]
   },
@@ -132,7 +195,53 @@
    "cell_type": "markdown",
    "id": "820a1905",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "1. 'spam' + 'spamspam' gives 'spamspamspam'\n",
+    "2. 'spam' * 3 gives 'spamspamspam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "51445c33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'spamspamspam'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'spam' + 'spamspam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8063d687",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'spamspamspam'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'spam' * 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,7 +255,17 @@
    "cell_type": "markdown",
    "id": "d27e36f6",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "eggs is a valid variable name where as 200 is invalid because variable names in python should not start with numbers.\n",
+    "\n",
+    "The following are the variable naming rules to be followed in python:\n",
+    "\n",
+    "    1. A variable name should start with a character or underscore character.\n",
+    "    2. A variable name cannot start with numbers.\n",
+    "    3. A variable name can only contain alpha numeric characters and underscore character\n",
+    "    4. Variable names are cse sensitive."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,7 +279,80 @@
    "cell_type": "markdown",
    "id": "7f60bf0c",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    a. int() is the function used to get integer version of a value.\n",
+    "    b. float() is the function used to get floation-point number version of a value\n",
+    "    c. str() is the function used to get string version of a value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1abe676b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# suppose a=10.23\n",
+    "a = 10.23\n",
+    "int(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ccdd477d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10.23'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2327fe0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# suppose a=10\n",
+    "a = 10\n",
+    "float(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,6 +374,84 @@
    "cell_type": "markdown",
    "id": "58b908e2",
    "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "String concatenation can only done between strings. but 99 is an integer value because of which it will not allow the above expression to be executed\n",
+    "\n",
+    "We can convert 99 to string either by using str() function or enclosing 99 between quotation marks to fix this issue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8a1f30a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5708/1774935878.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m'I have eaten '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m99\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' burritos.'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "'I have eaten ' + 99 + ' burritos.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ddf7d1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I have eaten 99 burritos.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I have eaten ' + '99' + ' burritos.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "20875b79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I have eaten 99 burritos.'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I have eaten ' + str(99) + ' burritos.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3af6c1e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
