--- a/python Basic Assignments/Assignment_2.ipynb
+++ b/python Basic Assignments/Assignment_2.ipynb
@@ -12,7 +12,18 @@
    "cell_type": "markdown",
    "id": "1ab48d2a",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "The two values of Boolean data type are True and False.\n",
+    "    \n",
+    "    a. True represents value 1\n",
+    "    b. False represents value 0\n",
+    "    \n",
+    "Both the values should be written with starting letter capital\n",
+    "\n",
+    "    eg: True, False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -26,7 +37,18 @@
    "cell_type": "markdown",
    "id": "a2d23be7",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "The three different types of Boolean operators are:\n",
+    "\n",
+    "    a. and - Returns True if both the statements are true.\n",
+    "                eg: 1<5 and 2<10 result will be True\n",
+    "    b. or  - Returns True if one of the statements is true.\n",
+    "                eg: 1>5 or 2<10 result will be True\n",
+    "    c. not - Reverses the result, Returns False if statement is true and viceversa.\n",
+    "                eg: not True result will be false\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,9 +60,66 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3f0b89",
+   "id": "9a875bd1",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "  a. Truth table for 'and' operator  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fccd9287",
+   "metadata": {},
+   "source": [
+    "| First Operand || Second Operand || Result |\n",
+    "| :-: || :-: || :-: |\n",
+    "| True || True || True |\n",
+    "| True || False || False |\n",
+    "| True || False || False |\n",
+    "| False || False || False |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c06abf1a",
+   "metadata": {},
+   "source": [
+    "b. Truth Table for 'or' operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19f33d08",
+   "metadata": {},
+   "source": [
+    "| First Operand || Second Operand || Result |\n",
+    "| :-: || :-: || :-: |\n",
+    "| True || True || True |\n",
+    "| True || False || True |\n",
+    "| True || False || True |\n",
+    "| False || False || False |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32d19fe3",
+   "metadata": {},
+   "source": [
+    "c. Truth Table for 'not' operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2af10542",
+   "metadata": {},
+   "source": [
+    "| Operand || Result |\n",
+    "| :-: || :-: |\n",
+    "| True || False |\n",
+    "| False || True |"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,19 +134,156 @@
    "id": "dc1ed20d",
    "metadata": {},
    "source": [
-    "(5 > 4) and (3 == 5)\n",
-    "not (5 > 4)\n",
-    "(5 > 4) or (3 == 5)\n",
-    "not ((5 > 4) or (3 == 5))\n",
-    "(True and True) and (True == False)\n",
-    "(not False) or (not True)\n"
+    "(5 > 4) and (3 == 5)<br>\n",
+    "not (5 > 4)<br>\n",
+    "(5 > 4) or (3 == 5)<br>\n",
+    "not ((5 > 4) or (3 == 5))<br>\n",
+    "(True and True) and (True == False)<br>\n",
+    "(not False) or (not True)<br>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b5e7e40f",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "| expression || Result |\n",
+    "| :-: || :-: |\n",
+    "| (5 > 4) and (3 == 5) || False |\n",
+    "| not (5 > 4) || False |\n",
+    "| (5 > 4) or (3 == 5)) || True |\n",
+    "| not ((5 > 4) or (3 == 5))) || False |\n",
+    "| (True and True) and (True == False) || False |\n",
+    "| (not False) or (not True) || True |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "97eb4d77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(5 > 4) and (3 == 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "815a3eff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not (5 > 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6d4f3aa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(5 > 4) or (3 == 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "61ffc515",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not ((5 > 4) or (3 == 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7fc22817",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(True and True) and (True == False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "455a4b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(not False) or (not True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,7 +297,20 @@
    "cell_type": "markdown",
    "id": "f49aba66",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "The following are the six comparison operators:\n",
+    "\n",
+    "| Operator || Name |\n",
+    "| :-: || :-: |\n",
+    "| == || Equal |\n",
+    "| != || Not Equal |\n",
+    "| > || Greater Than |\n",
+    "| >= || Greater Than or Equal to |\n",
+    "| < || Less Than |\n",
+    "| <= || Less Than or Equal to |\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +324,16 @@
    "cell_type": "markdown",
    "id": "6f29f2ae",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "The assignment operator is represented by one equal to sign( = ) whereas comparison operator is represented by double equal to sign( == ).\n",
+    "\n",
+    "    a. assignment operator just assigns a value to a variable.\n",
+    "            eg: x = 4 denotes 4 is assigned to variable 'x'.\n",
+    "    b. Comparison operator compares 2 variables and returns True if both values are equal else False\n",
+    "            eg: x == 4 returns True if value in x is 4 else returns False.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,22 +348,52 @@
    "id": "4361461c",
    "metadata": {},
    "source": [
-    "spam = 0\n",
-    "if spam == 10:\n",
-    "print('eggs')\n",
-    "if spam > 5:\n",
-    "print('bacon')\n",
-    "else:\n",
-    "print('ham')\n",
-    "print('spam')\n",
-    "print('spam')\n"
+    "spam = 0<br>\n",
+    "if spam == 10:<br>\n",
+    "print('eggs')<br>\n",
+    "if spam > 5:<br>\n",
+    "print('bacon')<br>\n",
+    "else:<br>\n",
+    "print('ham')<br>\n",
+    "print('spam')<br>\n",
+    "print('spam')<br>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "fc013c5f",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "each identation increase represents one block.refer below code for 3 blocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e15a5581",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spam\n"
+     ]
+    }
+   ],
+   "source": [
+    "spam = 0                 #Block A\n",
+    "if spam == 10:           #Block A \n",
+    "    print('eggs')        #Block B inside Block A \n",
+    "    if spam > 5:         #Block B inside Block A \n",
+    "        print('bacon')   #Block C inside Block B which is inside Block A\n",
+    "    else:                #Block B inside Block A\n",
+    "        print('ham')     #Block C inside Block B which is inside Block A\n",
+    "    print('spam')        #Block B inside Block A \n",
+    "print('spam')            #Block A"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +404,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "216036a6",
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a175d371",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a value:10\n",
+      "Greetings!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get user input to store value in variable spam\n",
+    "spam = int(input('Please enter a value:'))\n",
+    "if spam == 1:\n",
+    "    print(\"Hello\")\n",
+    "elif spam == 2:\n",
+    "    print(\"Howdy\")\n",
+    "else:\n",
+    "    print(\"Greetings!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,7 +441,12 @@
    "cell_type": "markdown",
    "id": "58c4162f",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    a. If we are running our program in jupyter notebook, We may need to interupt (ctrl+c) our running kernal and restart kernal\n",
+    "    b. If our program is being run in a command prompt, we can simply interupt program execution by pressing ctrl+c which will stop execution."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,7 +460,78 @@
    "cell_type": "markdown",
    "id": "c85c0ae3",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    a. Break statement stops the loop and completely halts a loop and continues execution of statements after loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "078b2191",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Iteration  0\n",
+      " Iteration  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Break statement example\n",
+    "for i in range(5):\n",
+    "    if i == 2:\n",
+    "        break\n",
+    "    print(\" Iteration \",i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "977bab53",
+   "metadata": {},
+   "source": [
+    "    In above code, loop execution completely halted when i==2 since break is called when this condition is true\n",
+    "    \n",
+    "    b. Continue statement stops the current iteration and instructs loop to continue to next iteration. It will not completely halt the loop as in case of break statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b1e190e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Iteration  0\n",
+      " Iteration  1\n",
+      " Iteration  3\n",
+      " Iteration  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# continue statement example\n",
+    "for i in range(5):\n",
+    "    if i == 2:\n",
+    "        continue\n",
+    "    print(\" Iteration \",i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39e813e3",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    In above code, loop stopped executing iteration when i==2 since continue is called when this condition is true and continues with next iterations"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,7 +545,74 @@
    "cell_type": "markdown",
    "id": "0a45d0d3",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    range(10), range(0, 10), and range(0, 10, 1) gives same result as the default step size is 1 and default lower bound is 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1282ae05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "db1ec5aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(0, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f467a6af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(0, 10, 1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,7 +626,70 @@
    "cell_type": "markdown",
    "id": "86cf8c4d",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "764ab08f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using For loop\n",
+    "for i in range(1,11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e610d96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using While loop\n",
+    "i = 1\n",
+    "while i <= 10:\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,6 +703,19 @@
    "cell_type": "markdown",
    "id": "eefc1eb6",
    "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    Since module alone is imported, We need call as an object of that module(module.function)\n",
+    "    So, We should be calling spam.bacon()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85f9ce03",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
