Updated Programming Assignment 5 - 10

--- a/test.ipynb
+++ b/test.ipynb
@@ -74,8 +74,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29161853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = set([1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "38ea1a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d29f831c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(*lst):\n",
+    "    return([i.extend for i in lst])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4c1957f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<function list.extend(iterable, /)>, <function list.extend(iterable, /)>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1,2,3],[2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f4c3a5",
    "metadata": {},
    "outputs": [],
    "source": []
