Updated Programming Assignment 17

--- a/Python Programming Basic Assignments/Programming Assignment_17.ipynb
+++ b/Python Programming Basic Assignments/Programming Assignment_17.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a75595c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "30"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
    "source": [
     "def evenly_divisible(a,b,c):\n",
     "    lst = []\n",
-    "    for i in range(a,b):\n",
+    "    for i in range(a,b+1):\n",
     "        if i % c == 0:\n",
     "            lst.append(i)\n",
     "            \n",
