Updated Programming Assignment 14,15,24

--- a/Python Programming Basic Assignments/Programming Assignment_15.ipynb
+++ b/Python Programming Basic Assignments/Programming Assignment_15.ipynb
@@ -154,8 +154,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc5250fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of shape : 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape:\n",
+    "    def area(self):\n",
+    "        print('Area of shape : {}'.format(0))\n",
+    "\n",
+    "class Square(Shape):\n",
+    "    def __init__(self,length):\n",
+    "        self.length = length\n",
+    "    \n",
+    "    def area(self):\n",
+    "        print('Area of shape : {}'.format(self.length**2))\n",
+    "        \n",
+    "sq = Square(10)\n",
+    "sq.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21bf02a0",
    "metadata": {},
    "outputs": [],
    "source": []
