--- a/Python Programming Basic Assignments/Programming Assignment_24.ipynb
+++ b/Python Programming Basic Assignments/Programming Assignment_24.ipynb
@@ -108,11 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d8e25b89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter radius of circle: 11\n",
+      "380\n",
+      "69\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Circle:\n",
+    "    def __init__(self,radius):\n",
+    "        self.radius = radius\n",
+    "        \n",
+    "    def getArea(self):\n",
+    "        return round(math.pi * (self.radius**2))\n",
+    "    \n",
+    "    def getPerimeter(self):\n",
+    "        return round(2 * math.pi * self.radius)\n",
+    "    \n",
+    "r = float(input('Enter radius of circle: '))\n",
+    "    \n",
+    "circy = Circle(r)\n",
+    "print(circy.getArea())\n",
+    "print(circy.getPerimeter())\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
